Images and Media

--- a/aboutus.html
+++ b/aboutus.html
@@ -23,7 +23,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar=toggler-icon"></span>
             </button>
-            <a class="navbar-brand mr-auto"  href="./index.html">Ristorante con Fusion</a>
+            <a class="navbar-brand mr-auto"  href="./index.html"><img src="img/logo.png" height="30" width="40" alt=""></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
@@ -44,7 +44,8 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class ="col-12 col-sm align-self-center">
+                    <img src="img/logo.png" class="img-fluid" alt="logo">
                 </div>
             </div>
         </div>
@@ -115,10 +116,10 @@
             </div>
        </div>
        <div class="row row-content">
-           <div class="col-12 col-sm-9">
+           <div class="col-12 col-sm-3">
                <h2>Facts &amp; Figures</h2>
            </div>
-           <div class="col-12 col-sm-3">
+           <div class="col-12 col-sm-9">
                <div class="table-responsive">
                    <table class="table table-striped">
                        <thead class="thread-dark">
@@ -170,7 +171,7 @@
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="./contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-7 col-sm-5">
