--- a/index.html
+++ b/index.html
@@ -31,15 +31,18 @@
         </div>
     </div>
 </nav>
-    <header class ="jumbotron">
+    <header class ="jumbotron pb-5">
         <div class= "container">
             <div class="row row-header">
                 <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class ="col-12 col-sm align-self-center">
+                <div class ="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid" alt="logo">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <a type="button" class="btn btn-warning btn-lg px-5 d-block" href="#table-start">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -66,13 +69,19 @@
             </div>
         </div>
 
-        <div class= "row row-content">
-            <div class ="col-12 col-sm-4  col-md-3">
+        <div class= "row row-content align-items-center">
+            <div class ="col-12 col-sm-4  order-sm-first col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class ="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+            <div class="col col-sm order-sm-last col-md">
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW </span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                    <img class="d-flex ml-2 img-thumbnail align-self-center"
+                                src="img/buffet.png" alt="buffet">
+                </div>
             </div>
         </div>
 
@@ -95,6 +104,37 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div id="table-start" class="row row-content">
+            <form class="col-12 offset-sm-2 col-sm-8 align-items-center">
+                <div class="card ">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <dl class="row">
+                            <dd class="col-12 col-sm-2">Number of Guests</dd>
+                            <dd class="col-12 col-sm-10 ">
+                                <input type="radio">1 &nbsp;
+                                <input type="radio">2 &nbsp;
+                                <input type="radio">3 &nbsp;
+                                <input type="radio">4 &nbsp;
+                                <input type="radio">5 &nbsp;
+                                <input type="radio">6
+                            </dd>
+                        </dl>
+                        <dl class="row">
+                            <dd class="col-12 col-sm-2 ">Date and Time</dd>
+                            <dd class="col-12 col-sm-10 ">
+                                <span class="col-12 col-sm-6 px-0"><input class="rounded-lg px-0 border p-2" type="text" placeholder="Date"> </span>
+                                <span class="col-12 col-sm-6 px-0 px-sm-4"><input class="rounded-lg px-0 border p-2" type="text" placeholder="Time"></span>
+                            </dd>
+                        </dl>
+                        <div class="offset-sm-2 px-1">
+                            <button type="button" class=" btn btn-primary text-white rounded-lg"> Reserve </button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+            
         </div>
     </div>
 
