--- a/index.html
+++ b/index.html
@@ -28,9 +28,48 @@
                 <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
                 <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
             </ul>
+            <span class="navbar-text">
+                <a data-toggle="modal" data-target="#loginModal"><span class="fa fa-sign-in"></span> Login</a>
+            </span>
         </div>
     </div>
 </nav>
+<div id="loginModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg" role="content">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Login </h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-row">
+                        <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                                <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
+                        </div>
+                        <div class="form-group col-sm-4">
+                            <label class="sr-only" for="exampleInputPassword3">Password</label>
+                            <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+                        </div>
+                        <div class="col-sm-auto">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox">
+                                <label class="form-check-label"> Remember me
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>        
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
     <header class ="jumbotron pb-5">
         <div class= "container">
             <div class="row row-header">
@@ -42,7 +81,10 @@
                     <img src="img/logo.png" class="img-fluid" alt="logo">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a type="button" class="btn btn-warning btn-lg px-5 d-block" href="#table-start">Reserve Table</a>
+                    <a role="button" class="btn btn-warning nav-link btn-block btn-sm " data-toggle="tooltip" data-html="true"
+                    title="Or Call us at <br> <strong>+2013485678</strong>" 
+                    data-placement="bottom"
+                    href="#table-start">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -106,13 +148,13 @@
             </div>
         </div>
         <div id="table-start" class="row row-content">
-            <form class="col-12 offset-sm-2 col-sm-8 align-items-center">
-                <div class="card ">
-                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+            <div class="card">
+                <form class="col-12 align-items-center">
+                 <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
                     <div class="card-body">
                         <dl class="row">
                             <dd class="col-12 col-sm-2">Number of Guests</dd>
-                            <dd class="col-12 col-sm-10 ">
+                            <dd class=" col-12 col-sm-10 ">
                                 <input type="radio">1 &nbsp;
                                 <input type="radio">2 &nbsp;
                                 <input type="radio">3 &nbsp;
@@ -132,8 +174,8 @@
                             <button type="button" class=" btn btn-primary text-white rounded-lg"> Reserve </button>
                         </div>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
             
         </div>
     </div>
@@ -185,6 +227,11 @@
 <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script>
+    $(document).ready(function(){
+        $('[data-toggle="tooltip"').tooltip();
+    });
+</script>
 </body>
 
 </html>
