--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!-- inserting Navigation bar -->
 <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
     <div class="container">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
@@ -34,6 +35,8 @@
         </div>
     </div>
 </nav>
+
+<!-- inserting Modal -->
 <div id="loginModal" class="modal fade" role="dialog">
     <div class="modal-dialog modal-lg" role="content">
         <!-- Modal content-->
@@ -70,6 +73,47 @@
         </div>
     </div>
 </div>
+
+<!-- inserting Modal -->
+<div id="ReserveModal" class="modal fade" role="dialog">
+    <div class="modal-dialog modal-lg" role="content">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Reserve a Table </h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <form class="col-12 align-items-center">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                       <div class="card-body">
+                           <dl class="row">
+                               <dd class="col-12 col-sm-2">Number of Guests</dd>
+                               <dd class=" col-12 col-sm-10 ">
+                                   <input type="radio">1 &nbsp;
+                                   <input type="radio">2 &nbsp;
+                                   <input type="radio">3 &nbsp;
+                                   <input type="radio">4 &nbsp;
+                                   <input type="radio">5 &nbsp;
+                                   <input type="radio">6
+                               </dd>
+                           </dl>
+                           <dl class="row">
+                               <dd class="col-12 col-sm-2 ">Date and Time</dd>
+                               <dd class="col-12 col-sm-10 ">
+                                   <span class="col-12 col-sm-6 px-0"><input class="rounded-lg px-0 border p-2" type="text" placeholder="Date"> </span>
+                                   <span class="col-12 col-sm-6 px-0 px-sm-4"><input class="rounded-lg px-0 border p-2" type="text" placeholder="Time"></span>
+                               </dd>
+                           </dl>
+                           <div class="offset-sm-2 px-1">
+                               <button type="button" class=" btn btn-primary text-white rounded-lg"> Reserve </button>
+                           </div>
+                       </div>
+                   </form>
+            </div>
+        </div>
+    </div>
+</div>
     <header class ="jumbotron pb-5">
         <div class= "container">
             <div class="row row-header">
@@ -80,17 +124,66 @@
                 <div class ="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid" alt="logo">
                 </div>
+
+                <!--  inserting tooltip on the a->href button -->
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-warning nav-link btn-block btn-sm " data-toggle="tooltip" data-html="true"
-                    title="Or Call us at <br> <strong>+2013485678</strong>" 
-                    data-placement="bottom"
-                    href="#table-start">Reserve Table</a>
+                    <a role="button" class="btn btn-warning nav-link btn-block btn-sm" data-toggle="modal" data-target="#ReserveModal">Reserve Table</a>
                 </div>
             </div>
         </div>
     </header>
 
+    <!-- Inserting Carousel -->
     <div class ="container">
+        <div class="row row-content">
+            <div class="col">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="img/uthappizza.png" alt="uthappizza">  
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Uthappizza <span class="badge badge-danger">HOT </span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
+                                <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
+                                Italian pizza, topped with Cerignola olives, ripe vine
+                                cherry tomatoes, Vidalia onion, Guntur chillies and
+                                Buffalo Paneer.</p>
+                            </div>            
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/buffet.png" alt="buffet">
+                            <div class="carousel-caption d-none d-md-block">
+                            <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW </span></h2>
+                            <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/alberto.png" alt="alberto">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Alberto Somayya</h2>
+                                <h4>Executive Chef</h4>
+                                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
+                                    International experience having worked closely with
+                                    whos-who in the culinary world, he specializes in
+                                    creating mouthwatering Indo-Italian fusion experiences.
+                                </p>
+                            </div>
+                        </div>
+                    <!-- inserting carousel controls -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#mycarousel" data-slide-to="1"></li>
+                            <li data-target="#mycarousel" data-slide-to="2"></li>
+                        </ol>
+                        <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </a>
+                        <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class= "row row-content align-items-center">
             <div class ="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
@@ -138,6 +231,7 @@
                     <div class="media-body">
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
+                        <!-- class="d-none d-sm-block": shows up in the screen greater than sm size  -->
                         <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
                             International experience having worked closely with
                             whos-who in the culinary world, he specializes in
@@ -227,11 +321,13 @@
 <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
 <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script>
+
+<!-- script tag to invoke the tooltip -->
+<!-- <script>
     $(document).ready(function(){
         $('[data-toggle="tooltip"').tooltip();
     });
-</script>
+</script> -->
 </body>
 
 </html>
